# authenticode-rs

./: .deny.toml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
authenticode/: Cargo.toml  README.md
authenticode-tool/: Cargo.toml  README.md
authenticode-tool/src/: main.rs
authenticode/src/: authenticode_digest.rs  lib.rs  pe.rs  pe_object.rs  signature.rs  win_cert.rs
authenticode/tests/: test_authenticode.rs  test_errors.rs
authenticode/tests/data/: README.md  test_key_private.pem  test_key_public.pem  tiny.efi  tiny.signed.efi  tiny32.efi
authenticode/tests/testdata/: tiny32.signed.efi
xtask/: Cargo.toml
xtask/src/: main.rs  tiny_uefi_main.rs
