# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[workspace]
members = ["authenticode", "authenticode-tool", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/authenticode-rs"
rust-version = "1.85"
version = "0.5.0"

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
cms = { version = "0.2.0", default-features = false }
der = { version = "0.7.0", default-features = false }
digest = { version = "0.10.0", default-features = false }
object = { version = "0.37.0", default-features = false, features = ["pe", "read_core", "unaligned"] }
sha1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
