# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "authenticode-tool"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.71"
authenticode = { path = "../authenticode", features = ["std"] }
clap = { version = "4.0.0", features = ["derive"] }
cms = "0.2.0"
der = { version = "0.7.0", features = ["std"] }
digest = "0.10.0"
object = { version = "0.30.0", default-features = false, features = ["pe", "read_core", "std"] }
sha1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
