# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "authenticode"
categories = ["data-structures", "embedded", "no-std"]
description = "Library for working with Authenticode (no-std)"
keywords = ["authenticode", "no_std"]
exclude = ["tests/testdata"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cms = { version = "0.2.0", default-features = false }
const-oid = { version = "0.9.0", default-features = false }
der = { version = "0.7.0", default-features = false, features = ["derive"] }
digest = { version = "0.10.0", default-features = false }
object = { version = "0.36.0", default-features = false, features = ["pe", "read_core", "unaligned"], optional = true }
rsa = { version = "0.9.0", default-features = false }
sha1 = { version = "0.10.0", default-features = false, features = ["oid"] }
sha2 = { version = "0.10.0", default-features = false, features = ["oid"] }
spki = { version = "0.7.0", default-features = false }
x509-cert = { version = "0.2.0", default-features = false }

[features]
object = ["dep:object"]
std = []
