# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "authenticode"
categories = ["data-structures", "embedded", "no-std"]
description = "Library for working with Authenticode (no-std)"
keywords = ["authenticode", "no_std"]
exclude = ["tests/testdata"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cms.workspace = true
const-oid = { version = "0.9.0", default-features = false }
der = { workspace = true, features = ["derive"] }
digest.workspace = true
object = { workspace = true, optional = true }
rsa = { version = "0.9.10", default-features = false }
sha1 = { workspace = true, features = ["oid"] }
sha2 = { workspace = true, features = ["oid"] }
spki = { version = "0.7.0", default-features = false }
x509-cert = { version = "0.2.0", default-features = false }

[features]
object = ["dep:object"]
std = []
